# FreshPaper

./: .env.development  README.md  package-lock.json  package.json  tailwind.config.js
src/: App.jsx  input.css  main.jsx  output.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  test.rs
src/components/: AnimatedSearchInput.js  HomeHero.jsx  ImageCard.jsx  Navbar.js  SearchBar.jsx  SearchItemsList.jsx  SetSidebar.jsx  Sidebar.jsx  Sidebar2.jsx
src/pages/: HomePage.jsx  SearchPage.jsx  SettingsPage.jsx
