[package]
name = "wallpaper_app_latest"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "shell-open"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
rand = "0.8.5"
rayon = "1.9.0"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
display-info = "0.5.1"
futures = "0.3.30"
enigo = "0.2.0"
winit = "0.30.0"
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
